assets/frontend/css/ie7.css
/* Fix button widths */
input.button,
button.button,
div.block-cart div.actions button {
    padding: 5px 0;
}

/* Header h2 appearing in the middle of the page, rather than hidden behind the header image */

body a#branding h2 {
    margin-left: -480px;
}

/* Site navigation was wrapping into a small space on the right of the page */

body ul.site-navigation {
    max-width: 500px;
    min-width: 330px;
}

/* Header cart checkout button was too wide, breaking the layout */

body section.cart button {
    padding: 5px 0px;
}

/* Search form was too narrow and search button was too wide, breaking the layout */

body form#search-form {
    max-width: 400px;
    min-width: 265px;
}

body form#search-form button {
    padding: 5px;
}

/* Right sidebar gets pushed down */

div.col3-layout div.sidebar {
    width: 23%;
}

/* Photo navigation was appearing too far up in the wrong place */

body section.hproduct div#photos div.hoverscroll {
    padding-top: 350px;
}

/* Product description and product options were hidden behind product image */

body section.hproduct div.quick,
body section.hproduct aside.product-options {
    float: none;
    margin-left: 358px;
}

/* Reviewer name was indented */

body ul#reviews-list li h5.reviewer {
    margin-left: 0;
}

/* Poll answers didn't show numbers */
div.block-poll ol#poll-answers {
    margin-left: 30px;
}

/* Product list prices were all over the place */

body ul.list-products li h3.current-price, 
body ul.list-products li h4.original-price, 
body ul.list-products li h3.current-price, 
body ul.list-products li h4.original-price {
    clear: both;
    float: left;
    margin-left: 230px;
}

body ul.list-products li h4.original-price,
body ul.list-products li h3.current-price {
    margin-top: 0;
    width: 300px;
}

body ul.products-grid li h4.original-price + h3.current-price {
    margin-top: 0;
    width: 300px;
}

body ul.list-products li div.actions {
    clear: both;
    float: none;
    margin-left: 230px;
}

/* Continue shopping button in cart in the wrong place */

table#cart button.continue {
    float: left;
}

/* Checkout progress */
div.block-progress div.block-content ul li span {
    float: left;
}

/* Customer account login  */
body.customer-account-login div.col2-set div.col-2 {
    padding-left: 20px;
}

/* Footer social icons were stacking instead of floating 
Following lis need to be unfloated after this rule is applied */

body footer section.vcard ul li {
    float: left;
}

body footer section.vcard ul li.fn,
body footer section.vcard ul li.street-address,
body footer section.vcard ul li.locality,
body footer section.vcard ul li.postal-code,
body footer section.vcard ul li.country-name,
body footer section.vcard ul li.tel {
    float: none;
}

/* There was no gap between the social icons and address in the footer */

body footer section.vcard ul li.fn {
    padding-top: 5px;
}

